syntax = "proto3";

package dashboard.v1;

import "google/api/annotations.proto";

option go_package = "IOT_Hummingbird_back_end/api/dashboard/v1;v1";

// 首页仪表盘服务
service Dashboard {
  // 平台概述
  rpc Overview (OverviewRequest) returns (OverviewReply) {
    option (google.api.http) = {
      get: "/api/dashboard/overview"
    };
  }
  // 资源状态
  rpc Resource (ResourceRequest) returns (ResourceReply) {
    option (google.api.http) = {
      get: "/api/dashboard/resource"
    };
  }
  // 告警统计
  rpc AlarmStat (AlarmStatRequest) returns (AlarmStatReply) {
    option (google.api.http) = {
      get: "/api/dashboard/alarm-stat"
    };
  }
  // 设备消息统计
  rpc DeviceMessageCount (DeviceMessageCountRequest) returns (DeviceMessageCountReply) {
    option (google.api.http) = {
      get: "/api/dashboard/device-message-count"
    };
  }
}

message OverviewRequest {}

message OverviewReply {
  int32 product_total = 1;
  int32 product_published = 2;
  int32 product_unpublished = 3;
  int32 device_total = 4;
  int32 device_online = 5;
  int32 device_offline = 6;
  int32 driver_total = 7;
  int32 driver_running = 8;
  int32 driver_stopped = 9;
  int32 alarm_total = 10;
}

message ResourceRequest {}
message ResourceReply {
  double cpu = 1;
  double memory = 2;
  double load = 3;
  double disk = 4;
}

message AlarmStatRequest {}
message AlarmStatReply {
  int32 alarm_total = 1;
  int32 alarm_handled = 2;
  int32 alarm_unhandled = 3;
}

message DeviceMessageCountRequest {
  string start_time = 1;
  string end_time = 2;
}
message DeviceMessageCountReply {
  int32 count = 1;
}